applications/argocd/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    argo-workflows-oidc: "true"
