applications/argocd/resources/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-argocd
  namespace: argocd
spec:
  gatewayClassName: merged-eg
  listeners:
    - name: argocd-https
      protocol: TLS
      hostname: 'argocd.${K_INFRA_NAME}.${K_ZONE_NAME}'
      port: 443
      tls:
        mode: Passthrough
