applications/argocd/resources/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: eg-argocd
  hostnames:
    - "argocd.${K_INFRA_NAME}.${K_ZONE_NAME}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 443
          weight: 1
